2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Fix property assertions in EpcPublisher.

	* libepc/publisher.c: Fix property assertions

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Guard g_debug statements by epc_debug flag, which can by enabled
	by setting the EPC_DEBUG environment variable.

	* libepc/dispatcher.c: Guard g_debug statements.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Adjust indenting for consumer.h

	* libepc/consumer.h: Adjust indenting.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Improve API documentation and examples.

	* libepc/consumer.c, libepc/dispatcher.c, libepc/publisher.c:
	Improve API documentation.
	* tests/test-consumer.c, tests/test-publisher.c: Insert code comments
	as those files serve as examples and document command line arguments.
	* docs/reference/libepc/libepc-sections.txt:
	Remove EPC_PUBLISHER_SERVICE_NAME.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Split EPC_PUBLISHER_SERVICE_NAME into EPC_SERVICE_NAME,
	EPC_SERVICE_NAME_HTTP and EPC_SERVICE_NAME_HTTPS.

	* libepc/publisher.h: Remove EPC_PUBLISHER_SERVICE_NAME.
	* libepc/service-names.h, docs/reference/libepc/libepc-docs.sgml,
	docs/reference/libepc/libepc-sections.txt: Introduce
	EPC_SERVICE_NAME, EPC_SERVICE_NAME_HTTP and EPC_SERVICE_NAME_HTTPS.
	* libepc/publisher.c: Use EPC_SERVICE_NAME_HTTP
	instead of EPC_PUBLISHER_SERVICE_NAME.
	* tests/test-consumer.c: Use EPC_SERVICE_NAME
	instead of EPC_PUBLISHER_SERVICE_NAME.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Change library name to libepc.

	* docs/reference/libepc/Makefile.am, libepc.pc.in,
	Makefile.am: Change library name to libepc.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Tell automake to install developer files.

	* Makefile.am: Install header files and pkg-config information.
	* configure.in, libepc.pc.in: Provide pkg-config information.
	* .gitignore: Ignore libepc.pc.
