@@ -1,3 +1,9 @@
+2007-11-03  Mathias Hasselmann  <mathias@openismus.com>
+
+	Handle local collisions.
+
+	* libepc/dispatcher.c: Handle local collisions.
+
 2007-11-02  Mathias Hasselmann  <mathias@openismus.com>
 
 	Fix property assertions in EpcPublisher.
